--- a/src/html/mainpage.html
+++ b/src/html/mainpage.html
@@ -4,7 +4,7 @@
 
     <!-- local CSS sheet -->
     <link rel="stylesheet"
-    href="../src.css/stylesheet.css"> 
+    href="../css/stylesheet.css"> 
 
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" 
