--- a/src/html/mainpage.html
+++ b/src/html/mainpage.html
@@ -24,13 +24,13 @@
 <body>
     <div class="sideNav">
         <a class="closingBtn" href="#"><span class="glyphicon glyphicon-remove"></span></a>
-        <a href="#">Random Quotes</a>
-        <a href="#">Programming Quotes</a>
+        <a id="randomQuotes" href="#">Random Quotes</a>
+        <a id="programmingQuotes" href="#">Programming Quotes</a>
     </div>
     <div id="mainContainer" class="container-fluid">
             <div class="col-md-12 col-xs-12 ">
                 <div id="quoteContainer"> 
-                    <h1> Hello </h1>
+                    <h1 id="section"> Hello </h1>
                         <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat 
                         cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
                         <!--
