added openNav function

--- a/src/html/mainpage.html
+++ b/src/html/mainpage.html
@@ -23,11 +23,12 @@
 </head>
 <body>
     <div class="sideNav">
-        <a class="closingBtn" href="#"><span class="glyphicon glyphicon-remove"></span></a>
+        <a class="closingNavBtn" href="#"><span class="glyphicon glyphicon-remove"></span></a>
         <a id="randomQuotes" href="#">Random Quotes</a>
         <a id="programmingQuotes" href="#">Programming Quotes</a>
     </div>
     <div id="mainContainer" class="container-fluid">
+        <a class="openNavBtn" href="#"><span class="glyphicon glyphicon-remove"></span></a>
             <div class="col-md-12 col-xs-12 ">
                 <div id="quoteContainer"> 
                     <h1 id="section"> Hello </h1>
