--- a/src/html/mainpage.html
+++ b/src/html/mainpage.html
@@ -19,7 +19,6 @@
 
     <!-- local Script file -->
     <script src="../js/mainscript.js"></script>
-
 </head>
 <body>
     <div class="sideNav">
@@ -27,7 +26,7 @@
         <a id="randomQuotes" href="#">Random Quotes</a>
         <a id="programmingQuotes" href="#">Programming Quotes</a>
     </div>
-    <div class="openNav" style="background-color: #908988">
+    <div class="openNav">
         <a class="openNavBtn" href="#"><span class="glyphicon glyphicon-menu-hamburger"></span></a>
     </div>
     <div id="mainContainer" class="container-fluid">
