--- a/src/html/mainpage.html
+++ b/src/html/mainpage.html
@@ -21,6 +21,7 @@
     <script src="../js/mainscript.js"></script>
 </head>
 <body>
+    <!--
     <div class="sideNav">
         <a class="closingNavBtn" href="#"><span class="glyphicon glyphicon-remove" style="color:white"></span></a>
         <a id="randomQuotes" href="#">Random Quotes</a>
@@ -29,19 +30,15 @@
     <div class="openNav">
         <a class="openNavBtn" href="#"><span class="glyphicon glyphicon-menu-hamburger"></span></a>
     </div>
+    -->
     <div id="mainContainer" class="container-fluid">
-        <div class="col-md-12 col-xs-12 ">
-            <div id="quoteContainer"> 
-                <h1 id="section"> Hello </h1>
-                    <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat 
-                    cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
-                    <!--
-                    <p>Test text without any real meaning. Just as it states this text has no meaning!</p>
-                    -->
-                    <div class="quoteBtnContainer">
-                        <button type="button" class="quoteBtn btn">Next quoute</button>
-                    </div>
-            </div>
+        <div id="buttons">
+            <button type="button" class="quoteBtn">Next</button>
+            <button type="button" class="twitterBtn">TweetMe</button>
+        </div>
+        <div id="quoteContainer" class="col-md-12 col-xs-12 ">      
+             <p id="quote"></p>
+             <p id="author"></p>
         </div>
     </div>
 </body>
